--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "firestore-export-import": "^1.1.0",
     "node-sass": "^7.0.0",
     "sass": "^1.44.0",
     "sass-loader": "^10.1.1"
