--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "firebase": "^9.6.11",
+    "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -31,10 +32,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "firestore-export-import": "^1.1.0",
-    "node-sass": "^7.0.0",
-    "sass": "^1.44.0",
-    "sass-loader": "^10.1.1"
+    "firestore-export-import": "^1.1.0"
   },
   "browserslist": [
     "> 1%",
